objects/ssot__Coupon__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CouponCode__c</fullName>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CouponStatus__c</fullName>
        <label>Coupon Status Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Coupon_PromotionId_map_Promotion_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coupon_PromotionId_map_Promotion_Id_N_1</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>Coupon_PromotionId_map_Promotion_Id_N_1</relationshipLabel>
        <relationshipName>Coupon_PromotionId_map_Promotion_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Coupon Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsReturnCoupon__c</fullName>
        <label>Is Return Coupon</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsValid__c</fullName>
        <label>Is Valid</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryScanCodeLabel__c</fullName>
        <label>Primary Scan Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnCouponReason__c</fullName>
        <label>Return Coupon Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScanCode__c</fullName>
        <label>Scan Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryScanCodeLabel__c</fullName>
        <label>Secondary Scan Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>